--- a/main.css
+++ b/main.css
@@ -60,6 +60,9 @@
   border-radius: 5px;
   padding: 0px;
   margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .navbar li{
@@ -86,6 +89,33 @@
 .navbar li a:hover{
   color: #BFDBE5
 }
+
+
+.navbar button {
+  transition: all 0.3s ease 0s;
+  background-color: rgba(240,240,240,0.95);
+  font-family: Verdana, Geneva, sans-serif;
+  font-size: 14px;
+  color: #000000;
+  letter-spacing: 0px;
+  word-spacing: 0.4px;
+  font-weight: 400;
+  text-decoration: none;
+  font-style: normal;
+  font-variant: normal;
+  text-transform: none;
+  margin-top: 0px;
+  padding: 7px 15px;
+  border-radius: 50px;
+  margin-right: 10px;
+  border: none;
+}
+
+.navbar button:hover {
+  background: #BFDBE5;
+}
+
+
 
 .search_display{
   background: #C4C4C4;
