--- a/main.css
+++ b/main.css
@@ -109,6 +109,7 @@
   border-radius: 50px;
   margin-right: 10px;
   border: none;
+  outline: none;
 }
 
 .navbar button:hover {
@@ -244,6 +245,13 @@
 
 .select_query form select:hover{
   background:#BFDBE5
+}
+
+.select_query form textarea{
+  border-style: solid;
+  border-width: thin;
+  border-radius: 5px;
+  outline: none;
 }
 
 .results_container {
