--- a/main.css
+++ b/main.css
@@ -331,12 +331,17 @@
   border-style: solid;
   border-width: thin;
   font-size: 16px;
-  padding: 10px
+  padding: 10px;
+  width: 100%;
 }
 
 .results table td{
   border: 1px solid black;
   width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .results tr{
@@ -361,4 +366,3 @@
   border-radius: 5px;
   box-shadow: 3px 3px 3px 2px rgba(0, 0, 0, 0.2);
 }
-
