--- a/main.css
+++ b/main.css
@@ -244,7 +244,7 @@
 }
 
 .select_query form select:hover{
-  background:#BFDBE5
+  background:#BFDBE5;
 }
 
 .select_query form textarea{
@@ -252,6 +252,20 @@
   border-width: thin;
   border-radius: 5px;
   outline: none;
+}
+
+.select_query form a{
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 5px;
+  background: #3D4749;
+  color: white;
+  text-decoration: none;
+  transition: all 0.3s ease 0s;
+}
+
+.select_query form a:hover{
+  color:#BFDBE5;
 }
 
 .results_container {
